compose/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/foo"
                route:
                  cluster: web_service
                typed_per_filter_config:
                  envoy.filters.http.lua:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                    name: entry.lua
                metadata:
                  filter_metadata:
                    envoy.filters.http.lua:
                      plugins: 
                      - name: uri-blocker
                        conf:
                          rejected_code: 302
                          block_rules: 
                          - root.exe
                          - root.m+
              - match:
                  prefix: "/bar"
                route:
                  cluster: web_service
                typed_per_filter_config:
                  envoy.filters.http.lua:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                    name: entry.lua
                metadata:
                  filter_metadata:
                    envoy.filters.http.lua:
                      plugins: 
                      - name: redirect
                        conf:
                          ret_code: 301
                          uri: "/redirected/path"
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: entry.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                function envoy_on_request(request_handle)
                end
              source_codes:
                entry.lua:
                  filename: /apisix/entry.lua
          - name: envoy.router
            typed_config: {}

  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web_service
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
